fixed front page container flex so align-items:center works

--- a/src/front-page.scss
+++ b/src/front-page.scss
@@ -14,6 +14,7 @@
     flex: 1;
     width: 100%;
     padding-bottom: 38px;
+    height: 100%;
     // height: 100vh;
     .menu {
       position: absolute;
@@ -88,10 +89,10 @@
     }
     .front-page-wrapper {
       display: flex;
-      height: 100%;
+      flex: 1;
+      min-height: 100%;
       align-items: center;
       padding: 7rem;
-      margin-top: 200px;
       .text-container {
         user-select: none;
         display: flex;
@@ -125,7 +126,7 @@
       }
       @media (max-width: 850px) {
         padding: 2rem;
-        margin-top: 300px;
+        // margin-top: 250px;
         .text-container {
           .h1-container {
             width: 280px;
@@ -146,7 +147,6 @@
       }
       @media (max-width: 545px) {
         padding: .5rem;
-        margin-top: 350px;
         .text-container {
           .h1-container {
             width: 195px;
